<resources>
    <string name="app_name">Weather</string>
    <string name="chooseCity">Choose your city</string>
    <string name="weatherInformation">Weather information</string>
    <string name="selectedPosition">selected_position</string>
    <string name="send_info">send info</string>
    <string name="store_info">add information to history</string>
    <string name="information_history">Usage history</string>
    <string name="weather_info">Weather information</string>
    <string name="cancel">cancel</string>
    <string name="absent_software">Did not find necesary software</string>
    <string name="error">Wrong request</string>
    <string name="get_info">get information</string>
    <string name="clear_history">clear history</string>
    <string name="extra_message">Input extra message</string>
    <string name="settings">Settings</string>
    <string name="back_color">Background color</string>
    <string name="default_value">Current value</string>
    <string name="choose_back_color">Choose color:</string>
    <string name="caption_color">Caption color</string>
    <string name="history_color">History color</string>
    <string name="confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
