<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/weather_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weatherInformation"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginSide"
        android:layout_marginRight="@dimen/marginSide"
        android:textSize="@dimen/fontSize"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginSide"
        android:layout_marginRight="@dimen/marginSide"
        android:textSize="@dimen/fontSize"
        android:tooltipText="@string/extra_message"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_info"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/store_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_info"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>