<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseCity"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginSide"
        android:layout_marginRight="@dimen/marginSide"
        android:textSize="@dimen/fontSize"
        android:textColor="@color/colorPrimary"/>

    <Spinner
        android:id="@+id/cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginSide"
        android:layout_marginRight="@dimen/marginSide"/>

    <Button
        android:id="@+id/get_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_info"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information_history"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginSide"
        android:layout_marginRight="@dimen/marginSide"
        android:textSize="@dimen/fontSize"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/information_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginLeft="@dimen/marginSide"
        android:layout_marginRight="@dimen/marginSide"
        android:textSize="@dimen/fontSize"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/clear_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"/>

</LinearLayout>

